[tool.poetry]
name = "clspy"
version = "0.1.0"
description = "LSP Implementation for the C language using PyGls"
authors = ["OtherwiseJLo <jonathanglopez@gmail.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.7"
pygls = "^0.10.3"
tree-sitter = "^0.19.0"
Cython = "^0.29.23"
typer = "^0.3.2"

[tool.poetry.dev-dependencies]
black = "^21.5b2"
isort = "^5.8.0"
mypy = "^0.812"
flake8 = "^3.9.2"
tox = "^3.23.1"
pytest = "^6.2.4"
pre-commit = "^2.13.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
